# distributed-kv-store

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.rs
proto/: kvstore.proto
src/: lib.rs  main.rs
src/api/: grpc.rs  http.rs  mod.rs
src/network/: client.rs  mod.rs  server.rs
src/raft/: mod.rs  node.rs  state_machine.rs
src/storage/: log.rs  mod.rs  snapshot.rs
test_data/: db
test_db/: db  snap.000000000000012D
