[package]
name = "distributed-kv-store"
version = "0.1.0"
edition = "2021"
authors = ["chord233 <chord244@gmail.com>"]
description = "A distributed key-value store with Raft consensus algorithm"
license = "MIT"
repository = "https://github.com/chord233/distributed-kv-store"
keywords = ["distributed", "raft", "key-value", "consensus", "storage"]
categories = ["database", "network-programming"]
readme = "README.md"

[lib]
name = "distributed_kv_store"
path = "src/lib.rs"

[[bin]]
name = "kvstore-server"
path = "src/bin/kvstore-server.rs"

[[bin]]
name = "kvstore-client"
path = "src/bin/kvstore-client.rs"



[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"

# gRPC and protobuf
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# Storage
sled = "0.34"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# Networking
bytes = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
axum-test = "14.0"

[features]
default = []
# Enable TLS support
tls = ["tonic/tls"]
# Enable compression
compression = ["tonic/gzip"]
# Enable metrics collection
metrics = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

# Benchmarks will be added later
# [[bench]]
# name = "storage_bench"
# harness = false
# 
# [[bench]]
# name = "raft_bench"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
